@@ -21,7 +21,6 @@
  */
 package org.wildfly.clustering.jgroups.spi;
 
-import java.util.Collections;
 import java.util.Map;
 
 import org.jboss.as.network.SocketBinding;
@@ -38,6 +37,6 @@ public interface ProtocolConfiguration<P extends Protocol> {
     P createProtocol(ProtocolStackConfiguration stackConfiguration);
 
     default Map<String, SocketBinding> getSocketBindings() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
